# mapbiker-tile-bake

./: .env.example  .gitignore  README.md  docker-compose.valhalla.yaml  pyproject.toml
.github/workflows/: valhalla-bake.yaml
data/: classify_osm_tables.json
docs/: tile-format-v1.md
src/bake/: chunking.py  dgm.py  dgm10.py  intermediate.py  normalize.py  pack.py  retile.py  run.py  run_dgm.py  run_dgm10.py  run_osm.py  run_srtm.py  run_valhalla.py  schema.py  schema_osm.py  srtm30.py  tags_filter.py  upload.py  valhalla_tiles.py
src/bake/normalize/: __init__.py  classify.py  classify_osm.py
src/bake/sources/: _bucore3d.py  _citygml2.py  bayern.py  hessen.py  osm_pbf.py
tests/: test_bake_layer_presence.py  test_bake_osm_e2e.py  test_bake_osm_fallback.py  test_bake_osm_layer_presence.py  test_bayern.py  test_bucore3d_parser.py  test_chunking.py  test_citygml2_parser.py  test_classify.py  test_classify_osm.py  test_dgm.py  test_dgm10.py  test_hessen.py  test_intermediate.py  test_normalize.py  test_osm_pbf_parser.py  test_pack.py  test_retile.py  test_roof_type.py  test_schema.py  test_schema_osm.py  test_srtm30.py  test_tags_filter.py  test_upload.py  test_valhalla_tiles.py
tests/fixtures/: by-sample.gml  he-sample.gml  inspire-bu-core3d-frankfurt.xml  nrw-sample.gml
tests/fixtures/osm_pbf/: barrier_hedge.osm.pbf  barrier_kerb.osm.pbf  build_fixtures.py  building_colour_material.osm.pbf  building_residential.osm.pbf  landuse_farmland.osm.pbf  road_width_tunnel.osm.pbf  tree_prunus.osm.pbf  water_polygon_lake.osm.pbf
