[project]
name = "mapbiker-tile-bake"
version = "0.1.0"
description = "Bake LoD2 tiles for mapbiker from German Bundesland sources to R2"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.3",
    "pyogrio>=0.10",
    "shapely>=2.0",
    "mercantile>=1.2",
    "pyproj>=3.7",
    "requests>=2.32",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bake"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
