[project]
name = "mapbiker-tile-bake"
version = "0.1.0"
description = "Bake LoD2 tiles for mapbiker from German Bundesland sources to R2"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43",
    "lxml>=5.3",
    "mercantile>=1.2",
    "numpy>=2.0",
    "osmium>=3.7",
    "Pillow>=12.0",
    "pydantic>=2.9",
    "pyogrio>=0.10",
    "pyproj>=3.7",
    "python-dotenv>=1.0",
    "rasterio>=1.4",
    "requests>=2.32",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bake"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
